--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@radix-ui/react-tooltip": "^1.1.4",
     "@splinetool/react-spline": "^4.0.0",
     "@splinetool/runtime": "^1.9.64",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.48.1",
     "@tabler/icons-react": "^3.31.0",
     "@tanstack/react-query": "^5.56.2",
@@ -68,10 +69,11 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
+    "react-markdown": "^10.1.0",
     "react-resizable-panels": "^2.1.3",
     "react-router-dom": "^6.26.2",
     "react-swipeable": "^7.0.1",
-    "recharts": "^2.12.7",
+    "recharts": "^2.15.3",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
